--- a/main.html
+++ b/main.html
@@ -5,9 +5,25 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
+<title>Accessible Portfolio</title>
 <body>
 	<!-- the entire body must be written by student -->
+	<image>
+	<img src="https://images.unsplash.com/photo-1695606392694-93de9b0bf320?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" atl="image" height="300px">
+	</image>
+	<head>
+	<h1>Beautiful images from unsplash</h1>
+	</head>
+	
+	<ul>
+		<li>Flesh</li>
+		<li>Paroota</li>
+		<li>Butter or Chees</li>
+		<li>Beans</li>
+	</ul>
+	<nav>
+		<a href="#">Link to website</a>
+	</nav>
     <script type="text/javascript" src="./script.js">
 </script>
 
